--- a/assets/stylesheets/source/styles.scss
+++ b/assets/stylesheets/source/styles.scss
@@ -25,21 +25,25 @@
 
 
 // @temp styles for testing
-body {
-  @include outer-container;
-}
+body { @include outer-container; }
+article { @include span-columns(6); }
+p { font-size: 1em; }
 
-article {
-  @include span-columns(6);
-}
+// The problem is that adding a number + unit makes a string, not a number Now
+// we can't strip the unit or do any math with it The way around this is to
+// multiply the end value (with or without a unit) by 1em, 1rem, or 1px. Our
+// problem is that we can't really do that because, since the unit is dynamic,
+// we always have to reference the string.
 
-p {
-  font-size: 1em; // 18px
-}
+// $font-size-base:        18     // unitless
+// u(18) => 1
+// $test-val really should have a unit attached.
+
 
 h1 {
+  // font-size: $test-val;
   @include rem(font-size, $font-size-xxxl);
-  // @include rem(padding, $font-size-xxxl 1em 1rem 2em);
+  @include rem(padding, 18px 1rem 2em $font-size-md);
 }
 
 // h1 { @include font-size($font-size-xxxl); }
