--- a/assets/stylesheets/source/global/mixins/mixins.scss
+++ b/assets/stylesheets/source/global/mixins/mixins.scss
@@ -13,9 +13,17 @@
 // Imports
 // ----------------------------------------------------------------------------
 
+// Helpers
+
+// Functions
+
+// CSS3 Mixins
+@import "rem";
+
+
+// Addons & other mixins
+@import "font-stacks";
+
 // Bourbon
 @import "bourbon/bourbon";
 @import "neat/neat";
-
-// CSS3
-@import "rem";
