--- a/assets/stylesheets/source/global/global.scss
+++ b/assets/stylesheets/source/global/global.scss
@@ -8,8 +8,7 @@
 // should be generic and applicable scross the entire project. Component-
 // specific mixins or variables should live at the component level.
 
-// Functions and mixins
-@import "functions/functions";
+// Mixins, functions, etc.
 @import "mixins/mixins";
 
 // Variables
