Global to settings

--- a/assets/stylesheets/source/styles.scss
+++ b/assets/stylesheets/source/styles.scss
@@ -19,7 +19,7 @@
 // Imports
 // ----------------------------------------------------------------------------
 
-@import "global/global";
+@import "settings/settings";
 @import "base/base";
 @import "components/components";
 
