--- a/assets/stylesheets/source/settings/mixins/mixins.scss
+++ b/assets/stylesheets/source/settings/mixins/mixins.scss
@@ -14,19 +14,64 @@
 // ----------------------------------------------------------------------------
 
 // Helpers
+@import "helpers/gradient-positions-parser";
+@import "helpers/linear-positions-parser";
+@import "helpers/radial-arg-parser";
+@import "helpers/radial-positions-parser";
+@import "helpers/render-gradients";
+@import "helpers/shape-size-stripper";
 
 // Functions
+@import "functions/compact";
+@import "functions/flex-grid";
+@import "functions/grid-width";
+@import "functions/linear-gradient";
+@import "functions/modular-scale";
+@import "functions/px-to-em";
+@import "functions/radial-gradient";
 @import "functions/strip-unit";
+@import "functions/tint-shade";
+@import "functions/transition-property-name";
 @import "functions/type-scale";
 @import "functions/unit";
 
 // CSS3 Mixins
+@import "css3/animation";
+@import "css3/appearance";
+@import "css3/backface-visibility";
+@import "css3/background";
+@import "css3/background-image";
+@import "css3/border-image";
+@import "css3/border-radius";
+@import "css3/box-sizing";
+@import "css3/columns";
+@import "css3/flex-box";
+@import "css3/hidpi-media-query";
+@import "css3/image-rendering";
+@import "css3/inline-block";
+@import "css3/keyframes";
+@import "css3/linear-gradient";
+@import "css3/perspective";
+@import "css3/placeholder";
+@import "css3/radial-gradient";
 @import "css3/rem";
-
+@import "css3/transform";
+@import "css3/transition";
+@import "css3/user-select";
 
 // Addons & other mixins
+@import "addons/button";
+@import "addons/clearfix";
 @import "addons/font-stacks";
+@import "addons/hide-text";
+@import "addons/html5-input-types";
+@import "addons/position";
+@import "addons/prefixer";
+@import "addons/ratios";
+@import "addons/retina-image";
+@import "addons/size";
+@import "addons/timing-functions";
+@import "addons/triangle";
 
 // Bourbon
-@import "bourbon/bourbon";
 @import "neat/neat";
