--- a/assets/stylesheets/source/settings/mixins/css3/_linear-gradient.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_linear-gradient.scss
@@ -1,3 +1,12 @@
+
+// Title:      Linear Gradient
+// Version:    3.1.8
+// Author:     Bourbon
+// Source:     http://bourbon.io
+
+// @source: https://developer.mozilla.org/en-US/docs/Web/CSS/gradient
+// @browser-support: http://caniuse.com/#feat=css-gradients
+
 @mixin linear-gradient($pos, $G1, $G2: false,
                        $G3: false, $G4: false,
                        $G5: false, $G6: false,
