--- a/assets/stylesheets/source/settings/mixins/css3/_columns.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_columns.scss
@@ -1,3 +1,12 @@
+
+// Title:      Columns
+// Version:    3.1.8
+// Author:     Bourbon
+// Source:     http://bourbon.io
+
+// @source: https://developer.mozilla.org/en-US/docs/Web/CSS/columns
+// @browser-support: http://caniuse.com/#feat=columns
+
 @mixin columns($arg: auto) {
 // <column-count> || <column-width>
   @include prefixer(columns, $arg, webkit moz spec);
