--- a/assets/stylesheets/source/settings/mixins/css3/_hidpi-media-query.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_hidpi-media-query.scss
@@ -1,4 +1,12 @@
-// HiDPI mixin. Default value set to 1.3 to target Google Nexus 7 (http://bjango.com/articles/min-device-pixel-ratio/)
+
+// Title:      Title
+// Version:    3.1.8
+// Author:     Bourbon
+// Source:     http://bourbon.io
+
+// HiDPI mixin. Default value set to 1.3 to target Google Nexus 7
+// @source: http://bjango.com/articles/min-device-pixel-ratio/
+
 @mixin hidpi($ratio: 1.3) {
   @media only screen and (-webkit-min-device-pixel-ratio: $ratio),
   only screen and (min--moz-device-pixel-ratio: $ratio),
