--- a/assets/stylesheets/source/settings/mixins/css3/_image-rendering.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_image-rendering.scss
@@ -1,3 +1,12 @@
+
+// Title:      Image Rendering
+// Version:    3.1.8
+// Author:     Bourbon
+// Source:     http://bourbon.io
+
+// @source: https://developer.mozilla.org/en-US/docs/Web/CSS/image-rendering
+// @browser-support: http://caniuse.com/#feat=image-rendering
+
 @mixin image-rendering ($mode:optimizeQuality) {
 
   @if ($mode == optimize-contrast) {
