--- a/assets/stylesheets/source/settings/mixins/css3/_inline-block.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_inline-block.scss
@@ -1,4 +1,11 @@
+
+// Title:      Inline Block
+// Version:    3.1.8
+// Author:     Bourbon
+// Source:     http://bourbon.io
+
 // Legacy support for inline-block in IE7 (maybe IE6)
+
 @mixin inline-block {
   display: inline-block;
   vertical-align: baseline;
