--- a/assets/stylesheets/source/settings/mixins/css3/_perspective.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_perspective.scss
@@ -1,3 +1,12 @@
+
+// Title:      Perspective
+// Version:    3.1.8
+// Author:     Bourbon
+// Source:     http://bourbon.io
+
+// @source: https://developer.mozilla.org/en-US/docs/Web/CSS/perspective
+// @browser-support: http://caniuse.com/#feat=perspective
+
 @mixin perspective($depth: none) {
   // none | <length>
   @include prefixer(perspective, $depth, webkit moz spec);
