--- a/assets/stylesheets/source/settings/mixins/css3/_placeholder.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_placeholder.scss
@@ -1,3 +1,12 @@
+
+// Title:      Placeholder
+// Version:    3.1.8
+// Author:     Bourbon
+// Source:     http://bourbon.io
+
+// @source: https://developer.mozilla.org/en-US/docs/Web/CSS/placeholder
+// @browser-support: http://caniuse.com/#feat=placeholder
+
 $placeholders: '-webkit-input-placeholder',
                '-moz-placeholder',
                '-ms-input-placeholder';
