--- a/assets/stylesheets/source/settings/mixins/css3/_radial-gradient.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_radial-gradient.scss
@@ -1,4 +1,13 @@
-// Requires Sass 3.1+
+
+// Title:      Gradient
+// Version:    3.1.8
+// Author:     Bourbon
+// Source:     http://bourbon.io
+
+// @source: https://developer.mozilla.org/en-US/docs/Web/CSS/gradient
+// @browser-support: http://caniuse.com/#feat=gradient
+// @requires: Sass 3.1+
+
 @mixin radial-gradient($G1,        $G2,
                        $G3: false, $G4: false,
                        $G5: false, $G6: false,
