--- a/assets/stylesheets/source/settings/mixins/css3/_background.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_background.scss
@@ -2,7 +2,7 @@
 // Title:      Background
 // Version:    3.1.8
 // Author:     Bourbon
-// Source:     http://bourbon.io
+// Source:     https://github.com/thoughtbot/bourbon
 
 // Add multiple backgrounds using shorthand notation.
 // @source: http://css-tricks.com/stacking-order-of-multiple-backgrounds/
