--- a/assets/stylesheets/source/settings/mixins/css3/_border-image.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_border-image.scss
@@ -2,7 +2,7 @@
 // Title:      Border Image
 // Version:    3.1.8
 // Author:     Bourbon
-// Source:     http://bourbon.io
+// Source:     https://github.com/thoughtbot/bourbon
 
 // @source: http://css-tricks.com/understanding-border-image/
 // @browser-support: http://caniuse.com/#search=border-image
