--- a/assets/stylesheets/source/settings/mixins/css3/_flex-box.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_flex-box.scss
@@ -2,7 +2,7 @@
 // Title:      Flex Box
 // Version:    3.1.8
 // Author:     Bourbon
-// Source:     http://bourbon.io
+// Source:     https://github.com/thoughtbot/bourbon
 
 // CSS3 Flexible Box Model and property defaults
 // @source: https://developer.mozilla.org/en-US/docs/Web/CSS/flex-box
