--- a/assets/stylesheets/source/settings/mixins/css3/_font-face.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_font-face.scss
@@ -2,7 +2,7 @@
 // Title:      Font Face
 // Version:    3.1.8
 // Author:     Bourbon
-// Source:     http://bourbon.io
+// Source:     https://github.com/thoughtbot/bourbon
 
 // Order of the includes matters, and it is: normal, bold, italic, bold+italic.
 // @source: https://developer.mozilla.org/en-US/docs/Web/CSS/font-face
