--- a/assets/stylesheets/source/settings/mixins/css3/_inline-block.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_inline-block.scss
@@ -2,7 +2,7 @@
 // Title:      Inline Block
 // Version:    3.1.8
 // Author:     Bourbon
-// Source:     http://bourbon.io
+// Source:     https://github.com/thoughtbot/bourbon
 
 // Legacy support for inline-block in IE7 (maybe IE6)
 
