--- a/assets/stylesheets/source/settings/mixins/addons/_hide-text.scss
+++ b/assets/stylesheets/source/settings/mixins/addons/_hide-text.scss
@@ -1,3 +1,12 @@
+
+// Title:      Hide text
+// Version:    3.1.8
+// Author:     Bourbon
+// Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#hide-text
+
+// Hide text for image replacement
+
 @mixin hide-text {
   color:            transparent;
   font:             0/0 a;
