--- a/assets/stylesheets/source/settings/mixins/addons/_html5-input-types.scss
+++ b/assets/stylesheets/source/settings/mixins/addons/_html5-input-types.scss
@@ -1,8 +1,19 @@
-//************************************************************************//
-// Generate a variable ($all-text-inputs) with a list of all html5
-// input types that have a text-based input, excluding textarea.
-// http://diveintohtml5.org/forms.html
-//************************************************************************//
+
+// Title:      HTML5 input types
+// Version:    3.1.8
+// Author:     Bourbon
+// Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#html5-input-types
+
+// Generate a variable ($all-text-inputs) with a list of all html5 input types
+// that have a text-based input, excluding textarea.
+// @source: http://diveintohtml5.org/forms.html
+
+// Example
+// #{$all-text-inputs}, textarea {
+//   border: 1px solid red;
+// }
+
 $inputs-list: 'input[type="email"]',
               'input[type="number"]',
               'input[type="password"]',
@@ -27,9 +38,9 @@ $unquoted-inputs-list: ();
 
 $all-text-inputs: $unquoted-inputs-list;
 
-
 // Hover Pseudo-class
-//************************************************************************//
+// ----------------------------------------------------------------------------
+
 $all-text-inputs-hover: ();
 @each $input-type in $unquoted-inputs-list {
       $input-type-hover: $input-type + ":hover";
@@ -37,20 +48,10 @@ $all-text-inputs-hover: ();
 }
 
 // Focus Pseudo-class
-//************************************************************************//
+// ----------------------------------------------------------------------------
+
 $all-text-inputs-focus: ();
 @each $input-type in $unquoted-inputs-list {
       $input-type-focus: $input-type + ":focus";
       $all-text-inputs-focus: append($all-text-inputs-focus, $input-type-focus, comma);
 }
-
-// You must use interpolation on the variable:
-// #{$all-text-inputs}
-// #{$all-text-inputs-hover}
-// #{$all-text-inputs-focus}
-
-// Example
-//************************************************************************//
-//   #{$all-text-inputs}, textarea {
-//     border: 1px solid red;
-//   }
