--- a/assets/stylesheets/source/settings/mixins/addons/_triangle.scss
+++ b/assets/stylesheets/source/settings/mixins/addons/_triangle.scss
@@ -1,3 +1,10 @@
+
+// Title:      Triangle
+// Version:    3.1.8
+// Author:     Bourbon
+// Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#triangle
+
 @mixin triangle ($size, $color, $direction) {
   height: 0;
   width: 0;
