--- a/assets/stylesheets/source/settings/mixins/css3/_backface-visibility.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_backface-visibility.scss
@@ -2,7 +2,7 @@
 // Title:      Backface-visibility mixin
 // Version:    3.1.8
 // Author:     Bourbon
-// Source:     http://bourbon.io
+// Source:     https://github.com/thoughtbot/bourbon
 
 // The CSS backface-visibility property determines whether or not the back face
 // of the element is visible when facing the user.
