--- a/assets/stylesheets/source/settings/mixins/css3/_background-image.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_background-image.scss
@@ -2,7 +2,7 @@
 // Title:      Background image
 // Version:    3.1.8
 // Author:     Bourbon
-// Source:     http://bourbon.io
+// Source:     https://github.com/thoughtbot/bourbon
 
 // Add multiple background images with gradients or for string multiple
 // gradients together.
