--- a/assets/stylesheets/source/settings/mixins/css3/_hidpi-media-query.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_hidpi-media-query.scss
@@ -2,7 +2,7 @@
 // Title:      Title
 // Version:    3.1.8
 // Author:     Bourbon
-// Source:     http://bourbon.io
+// Source:     https://github.com/thoughtbot/bourbon
 
 // HiDPI mixin. Default value set to 1.3 to target Google Nexus 7
 // @source: http://bjango.com/articles/min-device-pixel-ratio/
