--- a/assets/stylesheets/source/settings/mixins/css3/_keyframes.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_keyframes.scss
@@ -2,7 +2,7 @@
 // Title:      Keyframes
 // Version:    3.1.8
 // Author:     Bourbon
-// Source:     http://bourbon.io
+// Source:     https://github.com/thoughtbot/bourbon
 
 // Adds keyframes blocks for supported prefixes, removing redundant prefixes in the block's content
 
