--- a/assets/stylesheets/source/settings/mixins/css3/_radial-gradient.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_radial-gradient.scss
@@ -2,7 +2,7 @@
 // Title:      Gradient
 // Version:    3.1.8
 // Author:     Bourbon
-// Source:     http://bourbon.io
+// Source:     https://github.com/thoughtbot/bourbon
 
 // @source: https://developer.mozilla.org/en-US/docs/Web/CSS/gradient
 // @browser-support: http://caniuse.com/#feat=gradient
