--- a/assets/stylesheets/source/settings/mixins/css3/_transition.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_transition.scss
@@ -2,7 +2,7 @@
 // Title:      Transition
 // Version:    3.1.8
 // Author:     Bourbon
-// Source:     http://bourbon.io
+// Source:     https://github.com/thoughtbot/bourbon
 
 // Shorthand mixin. Supports multiple parentheses-deliminated values for each variable.
 // @source: https://developer.mozilla.org/en-US/docs/Web/CSS/transition
