--- a/assets/stylesheets/source/settings/mixins/css3/_flex-box.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_flex-box.scss
@@ -3,6 +3,7 @@
 // Version:    3.1.8
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#flex-box
 
 // CSS3 Flexible Box Model and property defaults
 // @source: https://developer.mozilla.org/en-US/docs/Web/CSS/flex-box
