--- a/assets/stylesheets/source/settings/mixins/functions/_unit.scss
+++ b/assets/stylesheets/source/settings/mixins/functions/_unit.scss
@@ -1,4 +1,9 @@
 
+// Title:      Unit conversion
+// Version:    0.0.1
+// Author:     Andy Smith
+// Source:     http://github/com/andyra/proto
+
 // Converts a pixel value into rem/em value. If $type-unit is set to `px`,
 // this function will simply return the value unmodified.
 
