--- a/assets/stylesheets/source/settings/mixins/css3/_backface-visibility.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_backface-visibility.scss
@@ -3,6 +3,7 @@
 // Version:    3.1.8
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#backface-visibility
 
 // The CSS backface-visibility property determines whether or not the back face
 // of the element is visible when facing the user.
