--- a/assets/stylesheets/source/settings/mixins/css3/_background-image.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_background-image.scss
@@ -3,6 +3,7 @@
 // Version:    3.1.8
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#background-image
 
 // Add multiple background images with gradients or for string multiple
 // gradients together.
