--- a/assets/stylesheets/source/settings/mixins/css3/_background.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_background.scss
@@ -3,6 +3,7 @@
 // Version:    3.1.8
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#background
 
 // Add multiple backgrounds using shorthand notation.
 // @source: http://css-tricks.com/stacking-order-of-multiple-backgrounds/
