--- a/assets/stylesheets/source/settings/mixins/css3/_border-image.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_border-image.scss
@@ -3,6 +3,7 @@
 // Version:    3.1.8
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#border-image
 
 // @source: http://css-tricks.com/understanding-border-image/
 // @browser-support: http://caniuse.com/#search=border-image
