--- a/assets/stylesheets/source/settings/mixins/css3/_border-radius.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_border-radius.scss
@@ -3,6 +3,7 @@
 // Version:    3.1.8
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#border-radius
 
 // @source: https://developer.mozilla.org/en-US/docs/Web/CSS/border-radius
 // @browser-support: http://caniuse.com/#search=border-radius
