--- a/assets/stylesheets/source/settings/mixins/css3/_columns.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_columns.scss
@@ -3,6 +3,7 @@
 // Version:    3.1.8
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#columns
 
 // @source: https://developer.mozilla.org/en-US/docs/Web/CSS/columns
 // @browser-support: http://caniuse.com/#feat=columns
