--- a/assets/stylesheets/source/settings/mixins/css3/_font-face.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_font-face.scss
@@ -3,6 +3,7 @@
 // Version:    3.1.8
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#font-face
 
 // Order of the includes matters, and it is: normal, bold, italic, bold+italic.
 // @source: https://developer.mozilla.org/en-US/docs/Web/CSS/font-face
