--- a/assets/stylesheets/source/settings/mixins/css3/_gradient-radial.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_gradient-radial.scss
@@ -3,12 +3,13 @@
 // Version:    3.1.8
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#radial-gradient
 
 // @source: https://developer.mozilla.org/en-US/docs/Web/CSS/gradient
 // @browser-support: http://caniuse.com/#feat=gradient
 // @requires: Sass 3.1+
 
-@mixin radial-gradient($G1,        $G2,
+@mixin gradient-radial($G1,        $G2,
                        $G3: false, $G4: false,
                        $G5: false, $G6: false,
                        $G7: false, $G8: false,
