--- a/assets/stylesheets/source/settings/mixins/css3/_hidpi-media-query.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_hidpi-media-query.scss
@@ -3,6 +3,7 @@
 // Version:    3.1.8
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#hdpi-media-query
 
 // HiDPI mixin. Default value set to 1.3 to target Google Nexus 7
 // @source: http://bjango.com/articles/min-device-pixel-ratio/
