--- a/assets/stylesheets/source/settings/mixins/css3/_inline-block.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_inline-block.scss
@@ -3,6 +3,7 @@
 // Version:    3.1.8
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#inline-block
 
 // Legacy support for inline-block in IE7 (maybe IE6)
 
