--- a/assets/stylesheets/source/settings/mixins/css3/_keyframes.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_keyframes.scss
@@ -3,6 +3,7 @@
 // Version:    3.1.8
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#keyframes
 
 // Adds keyframes blocks for supported prefixes, removing redundant prefixes in the block's content
 
