--- a/assets/stylesheets/source/settings/mixins/css3/_transition.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_transition.scss
@@ -3,6 +3,7 @@
 // Version:    3.1.8
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#transitions
 
 // Shorthand mixin. Supports multiple parentheses-deliminated values for each variable.
 // @source: https://developer.mozilla.org/en-US/docs/Web/CSS/transition
