--- a/assets/stylesheets/source/settings/mixins/functions/_gradient-linear.scss
+++ b/assets/stylesheets/source/settings/mixins/functions/_gradient-linear.scss
@@ -1,3 +1,12 @@
+
+// Title:      Title
+// Version:    3.2.0-beta.2
+// Author:     Bourbon
+// Source:     https://github.com/thoughtbot/bourbon
+// Docs:       http://bourbon.io/docs/#linear-gradient-function
+
+// Outputs a linear-gradient
+
 @function linear-gradient($pos, $gradients...) {
   $type: linear;
   $pos-type: type-of(nth($pos, 1));
