--- a/assets/stylesheets/source/settings/mixins/functions/_type-scale.scss
+++ b/assets/stylesheets/source/settings/mixins/functions/_type-scale.scss
@@ -1,6 +1,12 @@
 
+// Title:      Type scale
+// Version:    0.0.1
+// Author:     Andy Smith
+// Source:     http://github/com/andyra/proto
+
 // Increment font sizes up and down the modular scale based on $font-size-base
 // and $type-ratio
+
 @function type-scale($increment) {
   // This just returns the default base font size with the correct type unit
   @if $increment == 0 {
