--- a/assets/stylesheets/source/settings/mixins/css3/_animation.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_animation.scss
@@ -1,6 +1,6 @@
 
 // Title:      Animation mixins
-// Version:    3.1.8
+// Version:    3.2.0-beta.2
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
 // Docs:       http://bourbon.io/docs/#animations
@@ -18,33 +18,40 @@
   @include prefixer(animation-name, $names, webkit moz spec);
 }
 
+
 @mixin animation-duration ($times...) {
   @include prefixer(animation-duration, $times, webkit moz spec);
 }
+
 
 @mixin animation-timing-function ($motions...) {
   // ease | linear | ease-in | ease-out | ease-in-out
   @include prefixer(animation-timing-function, $motions, webkit moz spec);
 }
 
+
 @mixin animation-iteration-count ($values...) {
   // infinite | <number>
   @include prefixer(animation-iteration-count, $values, webkit moz spec);
 }
+
 
 @mixin animation-direction ($directions...) {
   // normal | alternate
   @include prefixer(animation-direction, $directions, webkit moz spec);
 }
 
+
 @mixin animation-play-state ($states...) {
   // running | paused
   @include prefixer(animation-play-state, $states, webkit moz spec);
 }
 
+
 @mixin animation-delay ($times...) {
   @include prefixer(animation-delay, $times, webkit moz spec);
 }
+
 
 @mixin animation-fill-mode ($modes...) {
   // none | forwards | backwards | both
