--- a/assets/stylesheets/source/settings/mixins/css3/_background.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_background.scss
@@ -1,6 +1,6 @@
 
 // Title:      Background
-// Version:    3.1.8
+// Version:    3.2.0-beta.2
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
 // Docs:       http://bourbon.io/docs/#background
@@ -10,24 +10,23 @@
 // @browser-support: http://caniuse.com/#feat=multibackgrounds
 
 @mixin background(
-  $background-1       , $background-2: false,
-  $background-3: false, $background-4: false,
-  $background-5: false, $background-6: false,
-  $background-7: false, $background-8: false,
-  $background-9: false, $background-10: false,
-  $fallback: false
+  $background-1       , $background-2: null,
+  $background-3: null, $background-4: null,
+  $background-5: null, $background-6: null,
+  $background-7: null, $background-8: null,
+  $background-9: null, $background-10: null,
+  $fallback: null
 ) {
-  $backgrounds: compact($background-1, $background-2,
+  $backgrounds: $background-1, $background-2,
                 $background-3, $background-4,
                 $background-5, $background-6,
                 $background-7, $background-8,
-                $background-9, $background-10);
+                $background-9, $background-10;
 
   $fallback-color: false;
   @if (type-of($fallback) == color) or ($fallback == "transparent") {
     $fallback-color: $fallback;
   }
-
   @else {
     $fallback-color: _extract-background-color($backgrounds);
   }
@@ -35,7 +34,6 @@
   @if $fallback-color {
     background-color: $fallback-color;
   }
-
   background: _background-add-prefix($backgrounds, webkit);
   background: _background-add-prefix($backgrounds);
 }
