--- a/assets/stylesheets/source/settings/mixins/css3/_border-image.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_border-image.scss
@@ -1,6 +1,6 @@
 
 // Title:      Border Image
-// Version:    3.1.8
+// Version:    3.2.0-beta.2
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
 // Docs:       http://bourbon.io/docs/#border-image
@@ -8,11 +8,20 @@
 // @source: http://css-tricks.com/understanding-border-image/
 // @browser-support: http://caniuse.com/#search=border-image
 
+// Examples
+// @include border-image(url("image.png"));
+// @include border-image(url("image.png") 20 stretch);
+// @include border-image(linear-gradient(45deg, orange, yellow));
+// @include border-image(linear-gradient(45deg, orange, yellow) stretch);
+// @include border-image(linear-gradient(45deg, orange, yellow) 20 30 40 50 stretch round);
+// @include border-image(radial-gradient(top, cover, orange, yellow, orange));
+
 @mixin border-image($images) {
   -webkit-border-image: _border-add-prefix($images, webkit);
      -moz-border-image: _border-add-prefix($images, moz);
        -o-border-image: _border-add-prefix($images, o);
           border-image: _border-add-prefix($images);
+          border-style: solid;
 }
 
 @function _border-add-prefix($images, $vendor: false) {
@@ -54,12 +63,3 @@
   }
   @return $border-image;
 }
-
-//Examples:
-// @include border-image(url("image.png"));
-// @include border-image(url("image.png") 20 stretch);
-// @include border-image(linear-gradient(45deg, orange, yellow));
-// @include border-image(linear-gradient(45deg, orange, yellow) stretch);
-// @include border-image(linear-gradient(45deg, orange, yellow) 20 30 40 50 stretch round);
-// @include border-image(radial-gradient(top, cover, orange, yellow, orange));
-
