--- a/assets/stylesheets/source/settings/mixins/css3/_border-radius.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_border-radius.scss
@@ -1,6 +1,6 @@
 
 // Title:      Border radius
-// Version:    3.1.8
+// Version:    3.2.0-beta.2
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
 // Docs:       http://bourbon.io/docs/#border-radius
