--- a/assets/stylesheets/source/settings/mixins/css3/_gradient-linear.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_gradient-linear.scss
@@ -1,6 +1,6 @@
 
 // Title:      Linear Gradient
-// Version:    3.1.8
+// Version:    3.2.0-beta.2
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
 // Docs:       http://bourbon.io/docs/#linear-gradient
@@ -8,14 +8,12 @@
 // @source: https://developer.mozilla.org/en-US/docs/Web/CSS/gradient
 // @browser-support: http://caniuse.com/#feat=css-gradients
 
-@mixin gradient-linear($pos, $G1, $G2: false,
-                       $G3: false, $G4: false,
-                       $G5: false, $G6: false,
-                       $G7: false, $G8: false,
-                       $G9: false, $G10: false,
-                       $deprecated-pos1: left top,
-                       $deprecated-pos2: left bottom,
-                       $fallback: false) {
+@mixin gradient-linear($pos, $G1, $G2: null,
+                       $G3: null, $G4: null,
+                       $G5: null, $G6: null,
+                       $G7: null, $G8: null,
+                       $G9: null, $G10: null,
+                       $fallback: null) {
   // Detect what type of value exists in $pos
   $pos-type: type-of(nth($pos, 1));
   $pos-spec: null;
@@ -34,7 +32,7 @@
     $pos-spec:   nth($positions, 2);
   }
 
-  $full: compact($G1, $G2, $G3, $G4, $G5, $G6, $G7, $G8, $G9, $G10);
+  $full: $G1, $G2, $G3, $G4, $G5, $G6, $G7, $G8, $G9, $G10;
 
   // Set $G1 as the default fallback color
   $fallback-color: nth($G1, 1);
@@ -45,7 +43,6 @@
   }
 
   background-color: $fallback-color;
-  background-image: _deprecated-webkit-gradient(linear, $deprecated-pos1, $deprecated-pos2, $full); // Safari <= 5.0
   background-image: -webkit-linear-gradient($pos-degree $full); // Safari 5.1+, Chrome
   background-image: unquote("linear-gradient(#{$pos-spec}#{$full})");
 }
