--- a/assets/stylesheets/source/settings/mixins/css3/_image-rendering.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_image-rendering.scss
@@ -1,6 +1,6 @@
 
 // Title:      Image Rendering
-// Version:    3.1.8
+// Version:    3.2.0-beta.2
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
 // Docs:       http://bourbon.io/docs/#image-rendering
@@ -8,13 +8,13 @@
 // @source: https://developer.mozilla.org/en-US/docs/Web/CSS/image-rendering
 // @browser-support: http://caniuse.com/#feat=image-rendering
 
-@mixin image-rendering ($mode:optimizeQuality) {
+@mixin image-rendering ($mode:auto) {
 
-  @if ($mode == optimize-contrast) {
+  @if ($mode == crisp-edges) {
       image-rendering: -moz-crisp-edges;
       image-rendering: -o-crisp-edges;
       image-rendering: -webkit-optimize-contrast;
-      image-rendering: optimize-contrast;
+      image-rendering: crisp-edges;
   }
 
   @else {
