--- a/assets/stylesheets/source/settings/mixins/css3/_keyframes.scss
+++ b/assets/stylesheets/source/settings/mixins/css3/_keyframes.scss
@@ -1,6 +1,6 @@
 
 // Title:      Keyframes
-// Version:    3.1.8
+// Version:    3.2.0-beta.2
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
 // Docs:       http://bourbon.io/docs/#keyframes
@@ -16,39 +16,29 @@
 
   @if $original-prefix-for-webkit {
     @include disable-prefix-for-all();
-    $prefix-for-webkit: true;
+    $prefix-for-webkit: true !global;
     @-webkit-keyframes #{$name} {
       @content;
     }
   }
-
   @if $original-prefix-for-mozilla {
     @include disable-prefix-for-all();
-    $prefix-for-mozilla: true;
+    $prefix-for-mozilla: true !global;
     @-moz-keyframes #{$name} {
       @content;
     }
   }
-
-  @if $original-prefix-for-opera {
-    @include disable-prefix-for-all();
-    $prefix-for-opera: true;
-    @-o-keyframes #{$name} {
-      @content;
-    }
-  }
-
   @if $original-prefix-for-spec {
     @include disable-prefix-for-all();
-    $prefix-for-spec: true;
+    $prefix-for-spec: true !global;
     @keyframes #{$name} {
       @content;
     }
   }
 
-  $prefix-for-webkit:    $original-prefix-for-webkit;
-  $prefix-for-mozilla:   $original-prefix-for-mozilla;
-  $prefix-for-microsoft: $original-prefix-for-microsoft;
-  $prefix-for-opera:     $original-prefix-for-opera;
-  $prefix-for-spec:      $original-prefix-for-spec;
+  $prefix-for-webkit:    $original-prefix-for-webkit    !global;
+  $prefix-for-mozilla:   $original-prefix-for-mozilla   !global;
+  $prefix-for-microsoft: $original-prefix-for-microsoft !global;
+  $prefix-for-opera:     $original-prefix-for-opera     !global;
+  $prefix-for-spec:      $original-prefix-for-spec      !global;
 }
