--- a/assets/stylesheets/source/settings/mixins/mixins.scss
+++ b/assets/stylesheets/source/settings/mixins/mixins.scss
@@ -40,11 +40,13 @@
 @import "css3/border-image";
 @import "css3/border-radius";
 @import "css3/box-sizing";
+@import "css3/calc";
 @import "css3/columns";
 @import "css3/flex-box";
 @import "css3/gradient-linear";
 @import "css3/gradient-radial";
 @import "css3/hidpi-media-query";
+@import "css3/hyphens";
 @import "css3/image-rendering";
 @import "css3/inline-block";
 @import "css3/keyframes";
@@ -53,6 +55,7 @@
 @import "css3/rem";
 @import "css3/transform";
 @import "css3/transition";
+@import "css3/user-select";
 
 // Addons & other mixins
 @import "addons/clearfix";
