--- a/assets/stylesheets/source/settings/mixins/addons/_clearfix.scss
+++ b/assets/stylesheets/source/settings/mixins/addons/_clearfix.scss
@@ -1,8 +1,8 @@
 
 // Title:      Micro clearfix hack
-// Version:    0.0.1
-// Author:     Nicolas Gallagher
-// Source:     http://github/com/andyra/proto
+// Version:    3.2.0-beta.2
+// Author:     Bourbon
+// Source:     https://github.com/thoughtbot/bourbon
 
 // @source: http://nicolasgallagher.com/micro-clearfix-hack/
 // @browser-support: Firefox 3.5+, Safari 4+, Chrome, Opera 9+, IE 6+
