--- a/assets/stylesheets/source/settings/mixins/addons/_position.scss
+++ b/assets/stylesheets/source/settings/mixins/addons/_position.scss
@@ -1,6 +1,6 @@
 
 // Title:      Title
-// Version:    3.1.8
+// Version:    3.2.0-beta.2
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
 // Docs:       http://bourbon.io/docs/#position
@@ -20,6 +20,8 @@
     $position: relative;
   }
 
+  $coordinates: unpack($coordinates);
+
   $top: nth($coordinates, 1);
   $right: nth($coordinates, 2);
   $bottom: nth($coordinates, 3);
@@ -27,31 +29,19 @@
 
   position: $position;
 
-  @if $top == auto {
-    top: $top;
-  }
-  @else if not(unitless($top)) {
+  @if ($top and $top == auto) or (type-of($top) == number and not unitless($top)) {
     top: $top;
   }
 
-  @if $right == auto {
-    right: $right;
-  }
-  @else if not(unitless($right)) {
+  @if ($right and $right == auto) or (type-of($right) == number and not unitless($right)) {
     right: $right;
   }
 
-  @if $bottom == auto {
-    bottom: $bottom;
-  }
-  @else if not(unitless($bottom)) {
+  @if ($bottom and $bottom == auto) or (type-of($bottom) == number and not unitless($bottom)) {
     bottom: $bottom;
   }
 
-  @if $left == auto {
-    left: $left;
-  }
-  @else if not(unitless($left)) {
+  @if ($left and $left == auto) or (type-of($left) == number and not unitless($left)) {
     left: $left;
   }
 }
