--- a/assets/stylesheets/source/settings/mixins/addons/_prefixer.scss
+++ b/assets/stylesheets/source/settings/mixins/addons/_prefixer.scss
@@ -1,6 +1,6 @@
 
 // Title:      Prefixer
-// Version:    3.1.8
+// Version:    3.2.0-beta.2
 // Author:     Bourbon
 // Source:     https://github.com/thoughtbot/bourbon
 // Docs:       http://bourbon.io/docs/#prefixer
@@ -52,9 +52,9 @@ $prefix-for-spec:      true !default; // required for keyframe mixin
 }
 
 @mixin disable-prefix-for-all() {
-  $prefix-for-webkit:    false;
-  $prefix-for-mozilla:   false;
-  $prefix-for-microsoft: false;
-  $prefix-for-opera:     false;
-  $prefix-for-spec:      false;
+  $prefix-for-webkit:    false !global;
+  $prefix-for-mozilla:   false !global;
+  $prefix-for-microsoft: false !global;
+  $prefix-for-opera:     false !global;
+  $prefix-for-spec:      false !global;
 }
